--- a/01_Data_Preprocessing.ipynb
+++ b/01_Data_Preprocessing.ipynb
@@ -1,12 +1,270 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-16T16:58:27.993010Z",
+     "start_time": "2024-12-16T16:58:27.988530Z"
+    }
+   },
    "cell_type": "code",
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ],
+   "id": "6513be35ede41bcb",
    "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "d7d1cf2d44368689"
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T16:58:28.129776Z",
+     "start_time": "2024-12-16T16:58:28.015065Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Create a data frame and separate the columns by --> ;\n",
+    "data_frame = pd.read_csv('bank-full.csv', sep=';')"
+   ],
+   "id": "a1768c53677d4922",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T16:58:28.158833Z",
+     "start_time": "2024-12-16T16:58:28.143276Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Get first 5 rows of data frame\n",
+    "data_frame.head()"
+   ],
+   "id": "d80c080c4eb211c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   age           job  marital  education default  balance housing loan  \\\n",
+       "0   58    management  married   tertiary      no     2143     yes   no   \n",
+       "1   44    technician   single  secondary      no       29     yes   no   \n",
+       "2   33  entrepreneur  married  secondary      no        2     yes  yes   \n",
+       "3   47   blue-collar  married    unknown      no     1506     yes   no   \n",
+       "4   33       unknown   single    unknown      no        1      no   no   \n",
+       "\n",
+       "   contact  day month  duration  campaign  pdays  previous poutcome   y  \n",
+       "0  unknown    5   may       261         1     -1         0  unknown  no  \n",
+       "1  unknown    5   may       151         1     -1         0  unknown  no  \n",
+       "2  unknown    5   may        76         1     -1         0  unknown  no  \n",
+       "3  unknown    5   may        92         1     -1         0  unknown  no  \n",
+       "4  unknown    5   may       198         1     -1         0  unknown  no  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>job</th>\n",
+       "      <th>marital</th>\n",
+       "      <th>education</th>\n",
+       "      <th>default</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>housing</th>\n",
+       "      <th>loan</th>\n",
+       "      <th>contact</th>\n",
+       "      <th>day</th>\n",
+       "      <th>month</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>poutcome</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>management</td>\n",
+       "      <td>married</td>\n",
+       "      <td>tertiary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2143</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>261</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>44</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>single</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>29</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>151</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>33</td>\n",
+       "      <td>entrepreneur</td>\n",
+       "      <td>married</td>\n",
+       "      <td>secondary</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>76</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>47</td>\n",
+       "      <td>blue-collar</td>\n",
+       "      <td>married</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1506</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>single</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>no</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>5</td>\n",
+       "      <td>may</td>\n",
+       "      <td>198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T16:58:28.261784Z",
+     "start_time": "2024-12-16T16:58:28.238161Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Get information\n",
+    "data_frame.info()\n",
+    "# There are 45211 rows and 17 columns\n",
+    "# There are no missing values in the data frame"
+   ],
+   "id": "98a023ae76b91019",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 45211 entries, 0 to 45210\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   age        45211 non-null  int64 \n",
+      " 1   job        45211 non-null  object\n",
+      " 2   marital    45211 non-null  object\n",
+      " 3   education  45211 non-null  object\n",
+      " 4   default    45211 non-null  object\n",
+      " 5   balance    45211 non-null  int64 \n",
+      " 6   housing    45211 non-null  object\n",
+      " 7   loan       45211 non-null  object\n",
+      " 8   contact    45211 non-null  object\n",
+      " 9   day        45211 non-null  int64 \n",
+      " 10  month      45211 non-null  object\n",
+      " 11  duration   45211 non-null  int64 \n",
+      " 12  campaign   45211 non-null  int64 \n",
+      " 13  pdays      45211 non-null  int64 \n",
+      " 14  previous   45211 non-null  int64 \n",
+      " 15  poutcome   45211 non-null  object\n",
+      " 16  y          45211 non-null  object\n",
+      "dtypes: int64(7), object(10)\n",
+      "memory usage: 5.9+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   }
  ],
  "metadata": {
